--- a/templates/Error.html
+++ b/templates/Error.html
@@ -21,7 +21,7 @@
     
 
     </div>
-    # Shows an error message if the book is not found.
+    <!-- Shows an error message if the book is not found.-->
      <div style="    display: flex;
      flex-direction: column;
      justify-content: center;
